[cls_cscope_find]

--- a/bin/cls_cscope_find.conf
+++ b/bin/cls_cscope_find.conf
@@ -7,11 +7,17 @@
         "kconfig",	    "makefile", "README" 
                 ],
 
-    "EXCLUDE_DIRS" : [
-        "googletest"
-    ],
+    "PROJECTS" : {
+        "..\\libPython\\core":{},
 
-    "INCLUDE_DIRS" : [
-        "googletest\\\\samples"
-    ]
+        "..\\applet":{
+            "EXCLUDE_DIR_PATTERN" : [
+                "libinvestsim"
+            ],
+        
+            "INCLUDE_DIR_PATTERN" : [
+                "libinvestsim\\\\libcommon"
+            ]
+        }
+    }
 }
