--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,11 @@ dist/
 #output directory
 out-*/
 out/
+out-*
 
 #app
 applet/invest_sim/data
 applet/invest_sim/cache
 applet/invest_sim-shihpin/
+
 
